--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ón<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FiestIA - Exclusividad y Elegancia en Cada Celebración</title>
+  <title>FiestIA - Exclusividad y Dedicación en Cada Celebración</title>
   <style>
     /* Estilos generales */
     body {
