--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FiestIA - Exclusividad y Dedicación en Cada Celebración</title>
+  <title>FiestIA</title>
   <style>
     /* Estilos generales */
     body {
@@ -132,10 +132,10 @@
     <!-- Encabezado -->
     <header>
       <h1>FiestIA</h1>
-      <h2>Celebración y Elegancia en Cada Evento</h2>
+      <h2>Haz de tu celebración una exeriencia inolvidable</h2>
       <p>
-        Organizamos <strong>eventos corporativos</strong>, <strong>bodas</strong> y <strong>celebraciones exclusivas</strong> gestionadas en un solo lugar. 
-        Con tecnología de vanguardia y un enfoque personalizado, hacemos que cada momento sea inolvidable.
+        Organiza <strong>eventos corporativos</strong>, <strong>bodas</strong> y <strong>celebraciones exclusivas</strong> en un solo lugar. 
+        Con tecnología de vanguardia y un enfoque personalizado, hacemos que tu fiesta sea como la imaginaste.
       </p>
       <a href="#formulario" class="cta-button">Reserva tu Evento</a>
     </header>
