--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- Encabezado -->
     <header>
       <h1>FiestIA</h1>
-      <h2>Haz de tu celebración una exeriencia inolvidable</h2>
+      <h2>Haz de tu Celebración una Exeriencia Inolvidable</h2>
       <p>
         Organiza <strong>eventos corporativos</strong>, <strong>bodas</strong> y <strong>celebraciones exclusivas</strong> en un solo lugar. 
         Con tecnología de vanguardia y un enfoque personalizado, hacemos que tu fiesta sea como la imaginaste.
