--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     <!-- Encabezado -->
     <header>
       <h1>FiestIA</h1>
-      <h2>Haz de tu Celebración una Exeriencia Inolvidable</h2>
+      <h2>Que tu Celebración sea Épica</h2>
       <p>
-        Organiza <strong>eventos corporativos</strong>, <strong>bodas</strong> y <strong>celebraciones exclusivas</strong> en un solo lugar. 
+        Organiza tu <strong>boda</strong>, <strong>evento corporativo</strong> o <strong>celebración exclusiva</strong> en un solo lugar. 
         Con tecnología de vanguardia y un enfoque personalizado, hacemos que tu fiesta sea como la imaginaste.
       </p>
       <a href="#formulario" class="cta-button">Reserva tu Evento</a>
@@ -148,11 +148,11 @@
       </div>
       <div class="feature">
         <h3>Bodas Únicas</h3>
-        <p>Creamos bodas personalizadas que reflejan tu estilo y personalidad.</p>
+        <p>Haz un matrimonio único que refleje tu estilo y personalidad.</p>
       </div>
       <div class="feature">
         <h3>Celebraciones Exclusivas</h3>
-        <p>Desde cumpleaños hasta aniversarios, cada detalle está cuidado al máximo.</p>
+        <p>Cumpleaños y fiestas privadas, cada detalle está cuidado al máximo.</p>
       </div>
     </section>
 
